<resources>
    <string name="app_name">SnowTamTam</string>
    <string name="latest_groups">Latest Airport Groups</string>
    <string name="search">Search</string>
    <string name="placeholder">Placeholder</string>
    <string name="title_activity_show_airport_group">Show Airport Group</string>
    <string name="title_activity_search">Search</string>
    <string name="searchByOACI">Search by ICAO Code</string>
    <string name="title_activity_raw_snowtam">Raw Snowtam</string>
    <string name="month_January">January</string>
    <string name="month_February">February</string>
    <string name="month_March">March</string>
    <string name="month_April">April</string>
    <string name="month_May">May</string>
    <string name="month_June">June</string>
    <string name="month_July">July</string>
    <string name="month_August">August</string>
    <string name="month_September">September</string>
    <string name="month_October">October</string>
    <string name="month_November">November</string>
    <string name="month_December">December</string>
    <string name="date_At">At</string>
    <string name="dash">-</string>
    <string name="add">Add</string>
    <string name="AirportsInGroup">Airports In Group</string>
    <string name="remove">Remove</string>
    <string name="cantAddMore4">You can\'t add more than 4 airports to a group</string>
    <string name="groupRemoved">Airport group removed !</string>
    <string name="alreadyInGroup">This airport is already in the group</string>
    <string name="confirmDeletion">Do you want to delete this airport group ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="airportGroupDelete">Delete Airport Group</string>
    <string name="tipRawSnowtam">Display Row Snowtam</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="help_Date">Snowtam Emission Date and Hour</string>
    <string name="help_Country">Country</string>
    <string name="help_Condition">Runway State (Left / Middle / Right)</string>
    <string name="help_Thickness">Snow Thickness (Left / Middle / Right)</string>
    <string name="help_Friction">Friction Coefficient (Left / Middle / Right)</string>
    <string name="settings">Settings</string>
    <string name="help_RunwaySelector">Runway Selection</string>
    <string name="title_activity_settings">Settings</string>
    <string name="style">Appearance</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="noGroup">There is no group for the moment</string>
    <string name="noSnowtam">No Snowtam available for this airport</string>
    <string name="invalidICAO">Invalid ICAO</string>
</resources>
